--- a/lab.conf
+++ b/lab.conf
@@ -1,7 +1,7 @@
 LAB_DESCRIPTION="Lab réseau Kathara "
 LAB_VERSION=1.0
-LAB_AUTHOR="Mehdi Kaabachi"
-LAB_EMAIL= mehdikaabachi96@gmail.com
+LAB_AUTHOR="Halim BOUHOUI"
+LAB_EMAIL= halimbouhoui@gmail.com
 LAB_WEB=https://www.kathara.org/
 
 routeur1[0]=A
